--- a/hairista/Controller/Booking/BookingViewController.xib
+++ b/hairista/Controller/Booking/BookingViewController.xib
@@ -142,7 +142,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 đ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQT-Yb-xtV">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 đ" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQT-Yb-xtV">
                                     <rect key="frame" x="112" y="164" width="196" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="2kS-e6-IUp"/>
