--- a/hairista/Controller/Bookings/BookingOfMeCell/BookingOfMeCell.xib
+++ b/hairista/Controller/Bookings/BookingOfMeCell/BookingOfMeCell.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,6 +12,9 @@
         <array key="Roboto-Light.ttf">
             <string>Roboto-Light</string>
         </array>
+        <array key="Roboto-Medium.ttf">
+            <string>Roboto-Medium</string>
+        </array>
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
         </array>
@@ -20,98 +22,99 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookingOfMeCell" rowHeight="67" id="KGk-i7-Jjw" customClass="BookingOfMeCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookingOfMeCell" rowHeight="79" id="KGk-i7-Jjw" customClass="BookingOfMeCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="66.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Võ Nguyên Đông" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sP5-I9-9qt">
-                        <rect key="frame" x="46" y="8" width="196" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="196" id="9Wh-EE-r0i"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="qDi-o1-cBH"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5/12/2012 08:30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQT-wx-80n">
-                        <rect key="frame" x="202" y="9" width="110" height="21"/>
+                        <rect key="frame" x="202" y="12" width="110" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="IJe-ir-vXV"/>
                             <constraint firstAttribute="height" constant="21" id="h5F-jF-JBo"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="13"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10.000.000 đ" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nud-ab-xMa">
-                        <rect key="frame" x="224" y="38" width="88" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="88" id="Egx-NX-kVx"/>
-                            <constraint firstAttribute="height" constant="21" id="zPe-ct-aYC"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="13"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Salon Lê Hiếu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WO9-nv-t5H">
-                        <rect key="frame" x="46" y="37" width="170" height="21"/>
+                        <rect key="frame" x="54" y="12" width="155" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="7Kx-W1-4jr"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="P0Z-fm-m7j"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="15"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1hs-Cw-6LV">
-                        <rect key="frame" x="0.0" y="66" width="320" height="0.5"/>
+                        <rect key="frame" x="0.0" y="78" width="320" height="0.5"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="kdj-9r-Hq4"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_pin" translatesAutoresizingMaskIntoConstraints="NO" id="QN2-Ee-qg4">
-                        <rect key="frame" x="8" y="19" width="30" height="30"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_checked_booking" translatesAutoresizingMaskIntoConstraints="NO" id="QN2-Ee-qg4">
+                        <rect key="frame" x="8" y="24.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="eDd-C8-zmA"/>
                             <constraint firstAttribute="width" constant="30" id="jeE-6H-VZt"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9kv-0y-aUk">
+                        <rect key="frame" x="281" y="36" width="36" height="36"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="36" id="179-xg-c9R"/>
+                            <constraint firstAttribute="width" constant="36" id="Zgy-gu-Gec"/>
+                        </constraints>
+                        <state key="normal" image="ic_go"/>
+                        <connections>
+                            <action selector="touchBtnGo:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="JbN-h4-qBx"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10.000.000 đ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nud-ab-xMa">
+                        <rect key="frame" x="54" y="41" width="211" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="IFd-a3-afu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
+                        <color key="textColor" red="1" green="0.31328328700000002" blue="0.16705806510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nud-ab-xMa" firstAttribute="top" secondItem="RQT-wx-80n" secondAttribute="bottom" constant="8" id="3ts-1c-qze"/>
-                    <constraint firstItem="sP5-I9-9qt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="DOS-4y-6zR"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="WO9-nv-t5H" secondAttribute="trailing" constant="103" id="2Lc-5m-nui"/>
                     <constraint firstItem="QN2-Ee-qg4" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="DOl-2L-TAd"/>
                     <constraint firstItem="1hs-Cw-6LV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="FHt-ZS-ahv"/>
+                    <constraint firstItem="9kv-0y-aUk" firstAttribute="leading" secondItem="nud-ab-xMa" secondAttribute="trailing" constant="16" id="JKE-dz-sR3"/>
+                    <constraint firstItem="nud-ab-xMa" firstAttribute="top" secondItem="WO9-nv-t5H" secondAttribute="bottom" constant="8" id="LED-2Z-5Qw"/>
                     <constraint firstAttribute="bottom" secondItem="1hs-Cw-6LV" secondAttribute="bottom" id="LfR-tb-kMr"/>
-                    <constraint firstAttribute="trailing" secondItem="nud-ab-xMa" secondAttribute="trailing" constant="8" id="SPq-kf-LsM"/>
+                    <constraint firstItem="WO9-nv-t5H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="Tnd-ex-ICA"/>
                     <constraint firstItem="RQT-wx-80n" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Toz-8m-Knj"/>
-                    <constraint firstItem="RQT-wx-80n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="1" id="ZAW-BO-wH6"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="WO9-nv-t5H" secondAttribute="bottom" constant="0.5" id="d4A-9P-ARH"/>
-                    <constraint firstItem="WO9-nv-t5H" firstAttribute="leading" secondItem="QN2-Ee-qg4" secondAttribute="trailing" constant="8" id="f91-kx-Uiu"/>
+                    <constraint firstItem="9kv-0y-aUk" firstAttribute="top" secondItem="RQT-wx-80n" secondAttribute="bottom" constant="3" id="VHo-94-tZ3"/>
+                    <constraint firstItem="RQT-wx-80n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="ZAW-BO-wH6"/>
+                    <constraint firstItem="nud-ab-xMa" firstAttribute="leading" secondItem="QN2-Ee-qg4" secondAttribute="trailing" constant="16" id="bop-42-gor"/>
                     <constraint firstItem="QN2-Ee-qg4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="fJn-zn-R1x"/>
-                    <constraint firstItem="nud-ab-xMa" firstAttribute="leading" secondItem="WO9-nv-t5H" secondAttribute="trailing" constant="8" id="hbr-dS-56B"/>
-                    <constraint firstItem="sP5-I9-9qt" firstAttribute="leading" secondItem="QN2-Ee-qg4" secondAttribute="trailing" constant="8" id="ldU-E5-Q4f"/>
+                    <constraint firstItem="WO9-nv-t5H" firstAttribute="leading" secondItem="QN2-Ee-qg4" secondAttribute="trailing" constant="16" id="igb-as-Ghi"/>
+                    <constraint firstAttribute="trailing" secondItem="9kv-0y-aUk" secondAttribute="trailing" constant="3" id="klW-g2-plD"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="nud-ab-xMa" secondAttribute="bottom" priority="750" constant="8" id="ngC-9L-xKl"/>
                     <constraint firstAttribute="trailing" secondItem="1hs-Cw-6LV" secondAttribute="trailing" id="ogl-zO-yTS"/>
-                    <constraint firstItem="WO9-nv-t5H" firstAttribute="top" secondItem="RQT-wx-80n" secondAttribute="bottom" constant="7" id="veH-AK-3Pn"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgPin" destination="QN2-Ee-qg4" id="kI9-JQ-mhX"/>
-                <outlet property="lblBookingName" destination="sP5-I9-9qt" id="mfL-lI-bUW"/>
+                <outlet property="imgState" destination="QN2-Ee-qg4" id="r9g-vo-jgi"/>
                 <outlet property="lblSalonName" destination="WO9-nv-t5H" id="3v9-n6-7Xn"/>
                 <outlet property="lblStartDate" destination="RQT-wx-80n" id="yNM-an-0Je"/>
                 <outlet property="lblTotalPrice" destination="nud-ab-xMa" id="oPO-tq-OUN"/>
                 <outlet property="leadingContraintPin" destination="fJn-zn-R1x" id="bAn-8G-tf7"/>
                 <outlet property="widthContraintPin" destination="jeE-6H-VZt" id="J04-xS-vog"/>
             </connections>
-            <point key="canvasLocation" x="-421" y="-71"/>
+            <point key="canvasLocation" x="-421" y="-65.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ic_pin" width="30" height="30"/>
+        <image name="ic_checked_booking" width="50" height="50"/>
+        <image name="ic_go" width="24" height="24"/>
     </resources>
 </document>
