--- a/hairista/Controller/Manager/DetailBooking/ServiceBookingCell/ServiceBookingCell.xib
+++ b/hairista/Controller/Manager/DetailBooking/ServiceBookingCell/ServiceBookingCell.xib
@@ -16,37 +16,78 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ServiceBookingCell" id="KGk-i7-Jjw" customClass="ServiceBookingCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="381" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_add_service" translatesAutoresizingMaskIntoConstraints="NO" id="X7H-oF-sJZ">
+                        <rect key="frame" x="0.0" y="9" width="24" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="24" id="GSC-o8-dIb"/>
+                            <constraint firstAttribute="height" constant="24" id="qf8-7h-1oM"/>
+                        </constraints>
+                    </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Iu-Be-RYV">
-                        <rect key="frame" x="0.0" y="0.0" width="160" height="44"/>
+                        <rect key="frame" x="24" y="0.0" width="178.5" height="44"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cắt tóc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4t-OA-97P">
-                                <rect key="frame" x="8" y="12" width="144" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cắt tóc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4t-OA-97P">
+                                <rect key="frame" x="8" y="12" width="162.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="ONU-FV-wFC"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                 <color key="textColor" red="1" green="0.76360524460000001" blue="0.45382189880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ErG-Lw-rae">
+                                <rect key="frame" x="19.5" y="22.5" width="140" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="AWg-yZ-ZTI"/>
+                                    <constraint firstAttribute="width" constant="140" id="sc5-dR-n6Z"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ErG-Lw-rae" firstAttribute="centerX" secondItem="9Iu-Be-RYV" secondAttribute="centerX" id="DB7-tz-YmL"/>
+                            <constraint firstItem="u4t-OA-97P" firstAttribute="leading" secondItem="9Iu-Be-RYV" secondAttribute="leading" constant="8" id="OdX-bj-3Ss"/>
+                            <constraint firstItem="ErG-Lw-rae" firstAttribute="centerY" secondItem="9Iu-Be-RYV" secondAttribute="centerY" constant="1" id="Vxc-4Z-UUT"/>
+                            <constraint firstAttribute="trailing" secondItem="u4t-OA-97P" secondAttribute="trailing" constant="8" id="q5X-gD-frf"/>
+                            <constraint firstItem="u4t-OA-97P" firstAttribute="centerY" secondItem="9Iu-Be-RYV" secondAttribute="centerY" id="yYh-iu-rEt"/>
+                        </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQB-j2-0Cp">
-                        <rect key="frame" x="160" y="0.0" width="160" height="44"/>
+                        <rect key="frame" x="202.5" y="0.0" width="178.5" height="44"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100.000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWC-8S-Rcx">
-                                <rect key="frame" x="8" y="12" width="144" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100.000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWC-8S-Rcx">
+                                <rect key="frame" x="8" y="12" width="162.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="9jE-Dy-leM"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                 <color key="textColor" red="1" green="0.76360524460000001" blue="0.45382189880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KVg-b2-OaG">
+                                <rect key="frame" x="19.5" y="21" width="140" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="1Wk-jH-LVJ"/>
+                                    <constraint firstAttribute="width" constant="140" id="5UN-If-ace"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KVg-b2-OaG" firstAttribute="centerX" secondItem="oQB-j2-0Cp" secondAttribute="centerX" id="6fL-9f-tAP"/>
+                            <constraint firstItem="kWC-8S-Rcx" firstAttribute="centerY" secondItem="oQB-j2-0Cp" secondAttribute="centerY" id="BC7-UZ-z0l"/>
+                            <constraint firstItem="kWC-8S-Rcx" firstAttribute="leading" secondItem="oQB-j2-0Cp" secondAttribute="leading" constant="8" id="D5c-0I-oXP"/>
+                            <constraint firstItem="KVg-b2-OaG" firstAttribute="centerY" secondItem="oQB-j2-0Cp" secondAttribute="centerY" id="cmP-oy-x0S"/>
+                            <constraint firstAttribute="trailing" secondItem="kWC-8S-Rcx" secondAttribute="trailing" constant="8" id="ysH-oi-gaf"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -57,17 +98,28 @@
                     <constraint firstItem="oQB-j2-0Cp" firstAttribute="width" secondItem="9Iu-Be-RYV" secondAttribute="width" id="SVj-oA-YLy"/>
                     <constraint firstAttribute="bottom" secondItem="oQB-j2-0Cp" secondAttribute="bottom" id="Swd-wo-one"/>
                     <constraint firstAttribute="bottom" secondItem="9Iu-Be-RYV" secondAttribute="bottom" id="VUp-Mk-u8U"/>
+                    <constraint firstItem="X7H-oF-sJZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Vgi-3Y-d9Q"/>
                     <constraint firstAttribute="trailing" secondItem="oQB-j2-0Cp" secondAttribute="trailing" id="aEy-eE-56R"/>
+                    <constraint firstItem="9Iu-Be-RYV" firstAttribute="leading" secondItem="X7H-oF-sJZ" secondAttribute="trailing" id="dU2-R5-qUm"/>
+                    <constraint firstItem="X7H-oF-sJZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="liI-Ei-ird"/>
                     <constraint firstItem="oQB-j2-0Cp" firstAttribute="leading" secondItem="9Iu-Be-RYV" secondAttribute="trailing" id="qgG-pZ-Mab"/>
-                    <constraint firstItem="9Iu-Be-RYV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="z62-2t-lbH"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="imgInsert" destination="X7H-oF-sJZ" id="yMw-4V-2j1"/>
                 <outlet property="lblSerivceName" destination="u4t-OA-97P" id="Y4y-lq-Zyr"/>
                 <outlet property="lblServicePrice" destination="kWC-8S-Rcx" id="M6b-NJ-5DS"/>
+                <outlet property="viewLine" destination="ErG-Lw-rae" id="Q8c-Q6-O1M"/>
+                <outlet property="viewLine2" destination="KVg-b2-OaG" id="WWO-mR-oVu"/>
+                <outlet property="widthContraintInsert" destination="GSC-o8-dIb" id="Lh2-bu-RUA"/>
+                <outlet property="widthContraintLine" destination="sc5-dR-n6Z" id="BNK-Z3-el5"/>
+                <outlet property="widthContraintLine2" destination="5UN-If-ace" id="CdA-2n-DyO"/>
             </connections>
-            <point key="canvasLocation" x="-177" y="-392"/>
+            <point key="canvasLocation" x="-207.5" y="-392"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ic_add_service" width="30" height="30"/>
+    </resources>
 </document>
