--- a/hairista/Controller/Manager/Images/ImageUpdateCell/ImageUpdateCell.xib
+++ b/hairista/Controller/Manager/Images/ImageUpdateCell/ImageUpdateCell.xib
@@ -65,6 +65,10 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="emptyCapType">
                                         <integer key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
+                                        <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="unitFontName" value="Roboto-Medium"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_error" translatesAutoresizingMaskIntoConstraints="NO" id="GT7-Vc-vdu">
